--- a/source/uwp/ObjectModelProjection/ObjectModelProjection.vcxproj.filters
+++ b/source/uwp/ObjectModelProjection/ObjectModelProjection.vcxproj.filters
@@ -41,6 +41,8 @@
     <ClCompile Include="..\..\shared\cpp\ObjectModel\DateTimePreparsedToken.cpp" />
     <ClCompile Include="..\..\shared\cpp\ObjectModel\Util.cpp" />
     <ClCompile Include="..\..\shared\cpp\ObjectModel\UnknownElement.cpp" />
+    <ClCompile Include="..\..\shared\cpp\ObjectModel\ParseResult.cpp" />
+    <ClCompile Include="..\..\shared\cpp\ObjectModel\AdaptiveCardParseWarning.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\shared\cpp\ObjectModel\Container.h" />
@@ -87,6 +89,8 @@
     <ClInclude Include="..\..\shared\cpp\ObjectModel\DateTimePreparsedToken.h" />
     <ClInclude Include="..\..\shared\cpp\ObjectModel\Util.h" />
     <ClInclude Include="..\..\shared\cpp\ObjectModel\UnknownElement.h" />
+    <ClInclude Include="..\..\shared\cpp\ObjectModel\ParseResult.h" />
+    <ClInclude Include="..\..\shared\cpp\ObjectModel\AdaptiveCardParseWarning.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="json">
