--- a/source/shared/cpp/AdaptiveCardsSharedModel/AdaptiveCardsSharedModel/AdaptiveCardsSharedModel.vcxproj
+++ b/source/shared/cpp/AdaptiveCardsSharedModel/AdaptiveCardsSharedModel/AdaptiveCardsSharedModel.vcxproj
@@ -121,7 +121,6 @@
     <ClCompile Include="..\..\ObjectModel\Column.cpp" />
     <ClCompile Include="..\..\ObjectModel\ColumnSet.cpp" />
     <ClCompile Include="..\..\ObjectModel\Container.cpp" />
-    <ClCompile Include="..\..\ObjectModel\CustomObjectDelegateForIOS.cpp" />
     <ClCompile Include="..\..\ObjectModel\DateInput.cpp" />
     <ClCompile Include="..\..\ObjectModel\DateTimePreparsedToken.cpp" />
     <ClCompile Include="..\..\ObjectModel\DateTimePreparser.cpp" />
@@ -148,6 +147,7 @@
     <ClCompile Include="..\..\ObjectModel\TextInput.cpp" />
     <ClCompile Include="..\..\ObjectModel\TimeInput.cpp" />
     <ClCompile Include="..\..\ObjectModel\ToggleInput.cpp" />
+    <ClCompile Include="..\..\ObjectModel\UnknownElement.cpp" />
     <ClCompile Include="..\..\ObjectModel\Util.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -161,7 +161,6 @@
     <ClInclude Include="..\..\ObjectModel\Column.h" />
     <ClInclude Include="..\..\ObjectModel\ColumnSet.h" />
     <ClInclude Include="..\..\ObjectModel\Container.h" />
-    <ClInclude Include="..\..\ObjectModel\CustomObjectDelegateForIOS.h" />
     <ClInclude Include="..\..\ObjectModel\DateInput.h" />
     <ClInclude Include="..\..\ObjectModel\DateTimePreparsedToken.h" />
     <ClInclude Include="..\..\ObjectModel\DateTimePreparser.h" />
@@ -189,6 +188,7 @@
     <ClInclude Include="..\..\ObjectModel\TextInput.h" />
     <ClInclude Include="..\..\ObjectModel\TimeInput.h" />
     <ClInclude Include="..\..\ObjectModel\ToggleInput.h" />
+    <ClInclude Include="..\..\ObjectModel\UnknownElement.h" />
     <ClInclude Include="..\..\ObjectModel\Util.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
