Introduce base classes for elements, inputs, and actions to reduce duplicated code.

--- a/source/uwp/Renderer/AdaptiveCardRenderer.vcxproj.filters
+++ b/source/uwp/Renderer/AdaptiveCardRenderer.vcxproj.filters
@@ -78,6 +78,9 @@
     <ClCompile Include="lib\HtmlHelpers.cpp" />
     <ClCompile Include="lib\InputValue.cpp" />
     <ClCompile Include="lib\pch.cpp" />
+    <ClCompile Include="lib\AdaptiveCardElement.cpp" />
+    <ClCompile Include="lib\AdaptiveInputElement.cpp" />
+    <ClCompile Include="lib\AdaptiveActionElement.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="lib\AdaptiveCard.h" />
@@ -163,6 +166,9 @@
     <ClInclude Include="lib\DateTimeParser.h" />
     <ClInclude Include="lib\HtmlHelpers.h" />
     <ClInclude Include="lib\InputValue.h" />
+    <ClInclude Include="lib\AdaptiveCardElement.h" />
+    <ClInclude Include="lib\AdaptiveInputElement.h" />
+    <ClInclude Include="lib\AdaptiveActionElement.h" />
   </ItemGroup>
   <ItemGroup>
     <Midl Include="idl\AdaptiveCards.Rendering.Uwp.idl" />
