--- a/source/android/adaptivecards/CMakeLists.txt
+++ b/source/android/adaptivecards/CMakeLists.txt
@@ -60,6 +60,7 @@ add_library( # Sets the name of the library.
              ../../shared/cpp/ObjectModel/UnknownElement.cpp
              ../../shared/cpp/ObjectModel/AdaptiveCardParseWarning.cpp
              ../../shared/cpp/ObjectModel/ParseResult.cpp
+             ../../shared/cpp/ObjectModel/ActionSet.cpp
              src/main/cpp/objectmodel_wrap.cpp
              )
 
