Add ActionSet to shared model and UWP

--- a/source/uwp/ObjectModelProjection/ObjectModelProjection.vcxproj.filters
+++ b/source/uwp/ObjectModelProjection/ObjectModelProjection.vcxproj.filters
@@ -46,6 +46,7 @@
     <ClCompile Include="..\..\shared\cpp\ObjectModel\AdaptiveCardParseWarning.cpp" />
     <ClCompile Include="..\..\shared\cpp\ObjectModel\ActionSet.cpp" />
     <ClCompile Include="..\..\shared\cpp\ObjectModel\FrameTranslator.cpp" />
+    <ClCompile Include="..\..\shared\cpp\ObjectModel\ActionSet.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\shared\cpp\ObjectModel\Container.h" />
@@ -96,6 +97,7 @@
     <ClInclude Include="..\..\shared\cpp\ObjectModel\AdaptiveCardParseWarning.h" />
     <ClInclude Include="..\..\shared\cpp\ObjectModel\ActionSet.h" />
     <ClInclude Include="..\..\shared\cpp\ObjectModel\FrameTranslator.h" />
+    <ClInclude Include="..\..\shared\cpp\ObjectModel\ActionSet.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="json">
