--- a/source/uwp/Visualizer/AdaptiveCardVisualizer.csproj
+++ b/source/uwp/Visualizer/AdaptiveCardVisualizer.csproj
@@ -62,6 +62,7 @@
       <DependentUpon>TabView.xaml</DependentUpon>
     </Compile>
     <Compile Include="ViewModel\ErrorViewModel.cs" />
+    <Compile Include="ViewModel\FrameEditorViewModel.cs" />
     <Compile Include="ViewModel\GenericDocumentViewModel.cs" />
     <Compile Include="ViewModel\HostConfigEditorViewModel.cs" />
     <Compile Include="ViewModel\MainPageViewModel.cs" />
@@ -103,6 +104,7 @@
     </Content>
     <Content Include="HostConfigs\DefaultHostConfig.json" />
     <None Include="AdaptiveCardVisualizer_TemporaryKey.pfx" />
+    <Content Include="HostConfigs\DefaultFrame.json" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Assets\Symbols\down.png" />
