Extremely bogus implementation (that sort of works)

--- a/source/uwp/PerfApp/PerfApp.vcxproj
+++ b/source/uwp/PerfApp/PerfApp.vcxproj
@@ -113,7 +113,7 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
-      <AdditionalOptions>/bigobj %(AdditionalOptions)</AdditionalOptions>
+      <AdditionalOptions>/bigobj /await %(AdditionalOptions)</AdditionalOptions>
       <DisableSpecificWarnings>4453;28204</DisableSpecificWarnings>
     </ClCompile>
   </ItemDefinitionGroup>
@@ -156,6 +156,7 @@
     <AppxManifest Include="Package.appxmanifest">
       <SubType>Designer</SubType>
     </AppxManifest>
+    <None Include="..\..\..\samples\v1.0\Elements\AdaptiveCard.json" />
     <None Include="PerfApp_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
