--- a/source/uwp/PerfApp/PerfApp.vcxproj.filters
+++ b/source/uwp/PerfApp/PerfApp.vcxproj.filters
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="PerfApp_TemporaryKey.pfx" />
+    <None Include="..\..\..\samples\v1.0\Elements\AdaptiveCard.json" />
   </ItemGroup>
   <ItemGroup>
     <Page Include="MainPage.xaml" />
