--- a/source/nodejs/adaptivecards-controls/package.json
+++ b/source/nodejs/adaptivecards-controls/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.0",
   "description": "A library of pure JS/HTML controls designed for use with Adaptive Cards.",
   "main": "built/adaptivecards-controls.js",
+  "types": "built/adaptivecards-controls.d.ts",
   "private": true,
   "scripts": {
     "build-dist": "webpack",
     "tsc": "tsc -p .",
     "build": "npm run tsc && npm run build-dist && npm run dts",
     "watch": "webpack --watch",    
-    "dts": "dts-generator --name ms-js-controls --project . --out dist/ms-js-controls.d.ts",
+    "dts": "dts-generator --name adaptivecards-controls --project . --out dist/adaptivecards-controls.d.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
