--- a/source/uwp/ObjectModelProjection/ObjectModelProjection.vcxproj.filters
+++ b/source/uwp/ObjectModelProjection/ObjectModelProjection.vcxproj.filters
@@ -44,6 +44,8 @@
     <ClCompile Include="..\..\shared\cpp\ObjectModel\UnknownElement.cpp" />
     <ClCompile Include="..\..\shared\cpp\ObjectModel\ParseResult.cpp" />
     <ClCompile Include="..\..\shared\cpp\ObjectModel\AdaptiveCardParseWarning.cpp" />
+    <ClCompile Include="..\..\shared\cpp\ObjectModel\Media.cpp" />
+    <ClCompile Include="..\..\shared\cpp\ObjectModel\MediaSource.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\shared\cpp\ObjectModel\Container.h" />
@@ -92,6 +94,8 @@
     <ClInclude Include="..\..\shared\cpp\ObjectModel\UnknownElement.h" />
     <ClInclude Include="..\..\shared\cpp\ObjectModel\ParseResult.h" />
     <ClInclude Include="..\..\shared\cpp\ObjectModel\AdaptiveCardParseWarning.h" />
+    <ClInclude Include="..\..\shared\cpp\ObjectModel\Media.h" />
+    <ClInclude Include="..\..\shared\cpp\ObjectModel\MediaSource.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="json">
