--- a/source/nodejs/adaptivecards-visualizer/package.json
+++ b/source/nodejs/adaptivecards-visualizer/package.json
@@ -32,7 +32,7 @@
     "webpack": "^3.10.0"
   },
   "dependencies": {
-    "adaptivecards": "^1.0.0-0",
+    "adaptivecards": ">1.0.0-0 <1.0.0",
     "markdown-it": "^8.4.0",
     "monaco-editor": "^0.10.1"
   }
