--- a/source/nodejs/adaptivecards-site/package.json
+++ b/source/nodejs/adaptivecards-site/package.json
@@ -11,8 +11,8 @@
     "version": "3.4.4"
   },
   "dependencies": {
-    "adaptivecards": "^1.0.0-0",
-    "adaptivecards-visualizer": "^1.0.0-0",
+    "adaptivecards": ">1.0.0-0 <1.0.0",
+    "adaptivecards-visualizer": ">1.0.0-0 <1.0.0",
     "change-case": "^3.0.1",
     "glob": "^7.1.2",
     "hexo": "^3.4.4",
