--- a/source/uwp/AdaptiveCardTestApp/AdaptiveCardTestApp.csproj
+++ b/source/uwp/AdaptiveCardTestApp/AdaptiveCardTestApp.csproj
@@ -128,6 +128,7 @@
     <None Include="AdaptiveCardTestApp_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\Adaptive10.png" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
     <Content Include="Assets\SplashScreen.scale-200.png" />
