--- a/source/uwp/Renderer/AdaptiveCardRenderer.vcxproj.filters
+++ b/source/uwp/Renderer/AdaptiveCardRenderer.vcxproj.filters
@@ -88,6 +88,7 @@
     <ClCompile Include="lib\AdaptiveMediaConfig.cpp" />
     <ClCompile Include="lib\AdaptiveMediaEventInvoker.cpp" />
     <ClCompile Include="lib\AdaptiveMediaEventArgs.cpp" />
+    <ClCompile Include="lib\AdaptiveRemoteResourceInformation.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="lib\AdaptiveCard.h" />
@@ -183,6 +184,7 @@
     <ClInclude Include="lib\AdaptiveMediaConfig.h" />
     <ClInclude Include="lib\AdaptiveMediaEventInvoker.h" />
     <ClInclude Include="lib\AdaptiveMediaEventArgs.h" />
+    <ClInclude Include="lib\AdaptiveRemoteResourceInformation.h" />
   </ItemGroup>
   <ItemGroup>
     <Midl Include="idl\AdaptiveCards.Rendering.Uwp.idl" />
